# haas_effect

./: Cargo.toml  README.md  bundler.toml  renovate.json
.github/workflows/: build.yml
src/: channel.rs  custom_formatters.rs  editor.rs  haas_buffer.rs  lib.rs  main.rs  sample.rs  sample_player.rs  util.rs
src/assets/: fart_with_extra_reverb.wav.asd
src/editor/: param_knob.rs  param_switch  theme.css
