[package]
name = "haashimself"
version = "0.1.0"
edition = "2021"
authors = ["tetra <me@tetra.cool>"]
license = "GPL-3.0-or-later"
homepage = ""
description = "simple haas vst3/clap plugin"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
enum-iterator = "1.4.1"
crossbeam-channel = "0.5.9"
atomic_float = "0.1.0"
ringbuf = "0.3.3"
rtrb = "0.3.0"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
