[package]
name = "haas_effect"
version = "0.1.0"
edition = "2024"
authors = ["tetra <me@tetra.cool>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/tetra-fox"
description = "haas effect"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
